[package]
name = "nakamoto"
description = "Privacy-preserving Bitcoin light-client"
documentation = "https://docs.rs/nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[workspace]
members = [
  "common",
  "p2p",
  "chain",
  "node",
  "test",
  "client",
  "wallet",
  "net/poll",
]

[features]
default = [
  "nakamoto-client",
  "nakamoto-chain",
  "nakamoto-p2p",
  "nakamoto-common",
  "nakamoto-net-poll"
]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features =["backtrace"] }
nakamoto-common = { version = "0.2.0", path = "./common", optional = true }
nakamoto-node = { version = "0.2.0", path = "./node", optional = true }
nakamoto-client = { version = "0.2.0", path = "./client", optional = true }
nakamoto-chain = { version = "0.2.0", path = "./chain", optional = true }
nakamoto-p2p = { version = "0.2.0", path = "./p2p", optional = true }
nakamoto-test = { version = "0.2.0", path = "./test", optional = true }
nakamoto-wallet = { version = "0.2.0", path = "./wallet", optional = true }
nakamoto-net-poll = { version = "0.2.0", path = "./net/poll", optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git"}
sgx_build_helper = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tprotected_fs = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_unwind = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git"}
