[package]
name = "nakamoto-chain"
description = "Chain storage and fork selection used by the nakamoto crate."
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-chain"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features =["backtrace", "untrusted_fs"] }
nakamoto-common = { version = "0.2.0", path = "../common", features = ["log"] }
bitcoin = { git = "https://github.com/Phala-Network/rust-bitcoin.git" }
bitcoin_hashes = { branch = "0.9.1-sgx", git = "https://github.com/Phala-Network/bitcoin_hashes" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }