[package]
name = "nakamoto-client"
description = "Bitcoin light-client library used by nakamoto crate"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-client"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features =["backtrace"] }
nakamoto-p2p = { version = "0.2.0", path = "../p2p" }
nakamoto-chain = { version = "0.2.0", path = "../chain" }
nakamoto-common = { version = "0.2.0", path = "../common" }
flume = { git = "https://github.com/Polkadex-Substrate/flume.git", default-features = false, branch = "sgx-enabled" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
fastrand = { git = "https://github.com/Polkadex-Substrate/fastrand.git" }
microserde = { git = "https://github.com/Polkadex-Substrate/microserde.git" }
bitcoin = { git = "https://github.com/Phala-Network/rust-bitcoin.git" }
