[package]
name = "nakamoto-common"
description = "Common types and functions shared by all nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-common"
repository = "https://github.com/cloudhead/nakamoto"
license = "MIT"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
bitcoin = { git = "https://github.com/Phala-Network/rust-bitcoin.git" }
bitcoin_hashes = { branch = "0.9.1-sgx", git = "https://github.com/Phala-Network/bitcoin_hashes" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git", optional = true }
fastrand = { git = "https://github.com/Polkadex-Substrate/fastrand.git" }
nonempty = { git = "https://github.com/Polkadex-Substrate/nonempty.git" }
microserde = { git = "https://github.com/Polkadex-Substrate/microserde.git" }
