[package]
name = "nakamoto-p2p"
description = "Peer-to-peer protocol state machine for the nakamoto crate"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-p2p"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.1"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
nakamoto-common = { version = "0.2.0", path = "../common" }
bitcoin = { git = "https://github.com/Phala-Network/rust-bitcoin.git" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
bitcoin_hashes = { branch = "0.9.1-sgx", git = "https://github.com/Phala-Network/bitcoin_hashes" }
flume = { git = "https://github.com/Polkadex-Substrate/flume.git", default-features = false, branch = "sgx-enabled" }
fastrand = { git = "https://github.com/Polkadex-Substrate/fastrand.git" }
microserde = { git = "https://github.com/Polkadex-Substrate/microserde.git" }