[package]
name = "nakamoto-net-poll"
description = "Poll-based networking for nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <alexis@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "net"] }
nakamoto-common = { version = "0.2.0", path = "../../common" }
nakamoto-p2p = { version = "0.2.0", path = "../../p2p" }
flume = { git = "https://github.com/Polkadex-Substrate/flume.git", default-features = false, branch = "sgx-enabled" }
popol = { git = "https://github.com/Polkadex-Substrate/popol.git" }
socket2 = {git ="https://github.com/Polkadex-Substrate/socket2.git"}
libc = { git = "https://github.com/mesalock-linux/libc-sgx.git" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
bitcoin = { git = "https://github.com/Phala-Network/rust-bitcoin.git" }
